user endpoints limited to superuser only

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block Main %}
 <div class="upload-container">
-    <form method="POST" action="/upload" enctype="multipart/form-data">
+    <form method="POST" action="files/upload" enctype="multipart/form-data">
 
         <div class="form-group">
             <label for="file_name">File Name:</label>
